# bd1

./: .gitignore
debugger/: components.json  forge.config.ts  index.html  package.json  tsconfig.base.json
debugger/src/: env.ts
debugger/src/main/: main.ts  tsconfig.json  vite.config.ts
debugger/src/main/src/: serial.ts
debugger/src/preload/: preload.ts  tsconfig.json
debugger/src/preload/src/: serial.ts  uno.ts
debugger/src/renderer/: App.tsx  index.css  renderer.ts  tsconfig.json  vite.config.mts
debugger/src/renderer/components/: mode-toggle.tsx  theme-provider.tsx
debugger/src/renderer/components/ui/: context-menu.tsx  input-otp.tsx  menubar.tsx  sidebar.tsx
debugger/src/renderer/src/: App.tsx  context.tsx
debugger/src/renderer/src/components/: mode-toggle.tsx
debugger/src/renderer/src/components/ui/: accordion.tsx  alert-dialog.tsx  alert.tsx  avatar.tsx  badge.tsx  breadcrumb.tsx  button-group.tsx  button.tsx  calendar.tsx  card.tsx  carousel.tsx  (+37 more)
debugger/src/renderer/src/pages/: main.page.tsx
firmware/: firmware.ino
firmware/kinematics/simulation/: CMakeLists.txt  bindings.cpp  build.sh  visualize.py
firmware/kinematics/src/: BD1_Biped.cpp  BD1_Biped.h  BD1_Gait.h  BD1_IK.h
firmware/lib/kinematics/: library.properties
firmware/lib/kinematics/simulation/: CMakeLists.txt  visualize.py
firmware/lib/kinematics/src/: BD1_Gait.cpp  BD1_IK.cpp  types.h
firmware/scripts/: build.sh  build_kinematics_simulation.sh  deploy.sh  kinematics_simulation.sh  simulation.sh  upload.sh
firmware/src/: MotorManager.cpp  MotorManager.h  joint.h
